{
    "name": "Controls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "deea3047-b524-4c5b-85b7-e1cdda04c686",
            "actions": [
                {
                    "name": "Player1",
                    "type": "Button",
                    "id": "1c96c5d7-b1e3-4c45-a6c5-40903deb134a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Player2",
                    "type": "Button",
                    "id": "25e7c002-1f7b-49e8-93f0-668e0f2e192c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player3",
                    "type": "Button",
                    "id": "da0de4ef-8dd9-4cc8-8dc9-c85342d878c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player4",
                    "type": "Button",
                    "id": "ab74d5bb-878d-4a64-a094-0b64751490ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "18cf18d0-f53e-4d7f-9006-d1117aeac818",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38f1a504-9104-46d3-9f6e-2db679c6c9b5",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb2cda3d-5d0d-47d3-8101-a8c3d56a68b4",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31f9ba5c-d113-44f7-9882-0f577011670e",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}